<resources>
    <string name="app_name">LoadAppFWD</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="app_description">Download files from Internet</string>
    <string name="notification_channel_title">LoadApp </string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="radio_button_glide">Glide - Image Loading Library by \nBump Tech</string>
    <string name="radio_button_loadApp">LoadApp - Current repository by Udacity</string>
    <string name="radio_button_retorfit">Retrofit - Type-safe HTTP client for \nAndroid and Java by Square, Inc </string>
    <string name="button_name">Download</string>
    <string name="button_name_details">OK</string>
    <string name="button_loading">We are loading </string>
    <string name="cloud_image">Image cloud</string>
    <string name="file_name_activity_detail">File name :</string>
    <string name="status_activity_detail">Status :</string>
    <string name="Glide">https://github.com/bumptech/glide</string>
    <string name="LoadApp">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter/archive/master.zip</string>
    <string name="Retrofit">https://github.com/square/retrofit</string>

</resources>