<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/cloud_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/cloud_image"
            android:src="@drawable/cloud_image"
            app:layout_constraintBottom_toTopOf="@+id/radio_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cloud_image">

            <RadioButton
                android:id="@+id/radio_button_glide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/radio_button_glide"
                android:textSize="21sp" />

            <RadioButton
                android:id="@+id/radio_button_loadApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/radio_button_loadApp"
                android:textSize="21sp"

                />

            <RadioButton
                android:id="@+id/radio_button_retrofit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/radio_button_retorfit"
                android:textSize="21sp"

                />

        </RadioGroup>

        <com.task1.loadappfwd.LodingButton
            android:id="@+id/download_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:text="@string/button_name"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>